<resources>
    <string name="app_name">Teologia de Bolso</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">Login</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="warning">Atenção</string>
    <string name="add_user_invalid_values">Dados inválidos! Verifique e tente novamente.</string>
    <string name="add_user_retry_add">Não foi possível criar usuário! Tente novamente mais tarde.</string>
    <string name="login_invalid_values">E-mail ou senha inválidos!</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="label_recuperar_senha">Informe e-mail de recuperação</string>
    <string name="recuperar">Recuperar</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="sair">Sair</string>
    <string name="salvar">Salvar</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="bio">Bio</string>
    <string name="localiza_o">Localização</string>
</resources>
